src/ui/snapshots/ktype__ui__tests__running_elapsed_5s.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
10                                                                              
                                                                                
the quick brown
