src/ui/snapshots/ktype__ui__tests__running_focus_mode.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
15                                                                              
                                                                                
the quick brown fox
