src/ui/snapshots/ktype__ui__tests__words_mode_running.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
1/4                                                                             
                                                                                
the quick brown fox
